# aws-orphans

./: .gitignore  README.md  VENV_SETUP.md  pyproject.toml  requirements.txt
app/: __init__.py  db.py  main.py  regions.py  scanner.py  scanner_ebs.py  scanner_eips.py
docs/: HOSTING_AZURE.md
scripts/: cron_populate_all.sh  populate_orphaned_ebs_db.py  populate_orphaned_eips_db.py  populate_orphaned_sgs_db.py  scan_orphaned_sgs.py
templates/: _nav.html  orphaned_ebs.html  orphaned_ebs_table.html  orphaned_eips.html  orphaned_eips_table.html  orphaned_sgs.html  orphaned_sgs_table.html
