[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-orphans"
version = "0.1.0"
description = "Scan AWS regions for orphaned security groups (CLI + FastAPI-ready)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
